--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,26 @@
-# Dependencies
-node_modules/
-backend/node_modules/
-frontend/node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Environment variables
-.env
-backend/.env
-frontend/.env
-*.env
-!.env.example
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# Build files
-build/
-dist/
-*.log
+# testing
+/coverage
 
-# OS files
+# production
+/build
+
+# misc
 .DS_Store
-Thumbs.db
-desktop.ini
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# Python (if any)
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-
-# Database
-*.sqlite
-*.db
-
-# Temporary files
-*.tmp
-*.temp
-.cache/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 
 
